新增 numpy 模組筆記

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -474,7 +474,8 @@
       "  [1 1]]\n",
       "\n",
       " [[5 6]\n",
-      "  [7 8]]]\n"
+      "  [7 8]]]\n",
+      "1\n"
      ]
     }
    ],
@@ -678,7 +679,13 @@
     "\n",
     "print(e)\n",
     "\n",
-    "\n"
+    "# 如果是用全部去指派就會變單純那個數字\n",
+    "\n",
+    "f = numpy.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "f = 1 \n",
+    "\n",
+    "print(f)\n"
    ]
   },
   {
@@ -915,13 +922,13 @@
     "\n",
     "# uniform 和 normal 有一定的分配，且可以自己設定區間或平均數和標準差，比較方便控制區間\n",
     "\n",
-    "# uniform 第一個參數 low 是下界，第二個 high 是上界，最後一個 size 是產生數量\n",
+    "# uniform 第一個參數 low 是下界，第二個 high 是上界，最後一個 size 是產生數量或 tuple 陣列\n",
     "\n",
     "a = uniform(low=-1,high=1,size=10)\n",
     "\n",
     "print(a)\n",
     "\n",
-    "# normal 第一個參數 loc 是平均值，第二個 scale 是標準差，最後一個 size 是產生數量\n",
+    "# normal 第一個參數 loc 是平均值，第二個 scale 是標準差，最後一個 size 是產生數量或 tuple 陣列\n",
     "\n",
     "b = normal(loc=5,scale=1,size=10)\n",
     "\n",
