修改 csv 筆記內容

--- a/python 模組使用練習/open , csv 模組.ipynb
+++ b/python 模組使用練習/open , csv 模組.ipynb
@@ -47,6 +47,8 @@
     "\n",
     "# csv.reader() 能逐行讀取 csv 檔，但讀取出來是 csv.reader 物件，是一個 iterator，要用 for 讀取元素或 list 轉換\n",
     "\n",
+    "# csv.reader 可以設定引數來接收不同分隔符號的 csv 檔\n",
+    "\n",
     "with open(\"D:/Python/python 模組使用練習/data & output/20250802.csv\", \"r\") as file : \n",
     "\n",
     "    csv_file = csv.reader(file)\n",
