新增 numpy 模組內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -806,10 +806,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 3)\n",
-      "2\n",
-      "3\n",
-      "6\n",
       "[[1 2 3]\n",
       " [4 5 6]]\n",
       "[0. 0. 0. 0. 0.]\n",
@@ -818,13 +814,14 @@
       "[[0 0 0]\n",
       " [0 0 0]]\n",
       "[ 0.   2.5  5.   7.5 10. ]\n",
-      "1.5211663562401798\n",
-      "[ 0.22144747 -0.09540139 -0.52757565  0.51114629 -0.82595167  0.84017366\n",
-      "  0.83770613 -0.29746691 -0.33393879 -0.3695579 ]\n",
-      "[4.61701896 3.50162079 5.16406571 6.11615016 4.21536973 4.6418353\n",
-      " 4.70395519 7.10278689 5.84463677 4.5759755 ]\n",
-      "0.4555570715373636\n",
-      "0.5788897433754048\n"
+      "0.9929638828300831\n",
+      "0.1098859043413074\n",
+      "[[  2   6 170]\n",
+      " [168  84  22]]\n",
+      "[-0.17098972  0.44418007 -0.67438359 -0.37147459  0.49183344  0.61233072\n",
+      "  0.35380834  0.50449786 -0.35079283 -0.03438269]\n",
+      "[6.78655688 6.09711741 6.45549929 4.29761006 6.22716856 5.04518521\n",
+      " 5.51444161 6.78248768 5.21606692 4.66364035]\n"
      ]
     }
    ],
@@ -869,7 +866,7 @@
     "\n",
     "\n",
     "\n",
-    "from numpy.random import random , rand , uniform , normal\n",
+    "from numpy.random import random , rand , uniform , normal , randint\n",
     "\n",
     "\n",
     "\n",
@@ -918,7 +915,16 @@
     "print(x_3)\n",
     "\n",
     "\n",
-    "# c. uniform() 和 normal()\n",
+    "# c. randint() \n",
+    "\n",
+    "# 是可以自己設定上下界 , size , 數字型別是 int 特性的 random \n",
+    "\n",
+    "x_4 = randint(low=0,high=255,size=(2,3))\n",
+    "\n",
+    "print(x_4)\n",
+    "\n",
+    "\n",
+    "# d. uniform() 和 normal()\n",
     "\n",
     "# uniform 和 normal 有一定的分配，且可以自己設定區間或平均數和標準差，比較方便控制區間\n",
     "\n",
@@ -933,6 +939,8 @@
     "b = normal(loc=5,scale=1,size=10)\n",
     "\n",
     "print(b)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
