修改 numpy 模組內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -866,7 +866,7 @@
     "\n",
     "\n",
     "\n",
-    "from numpy.random import random , rand , uniform , normal , randint\n",
+    "from numpy.random import random , rand , randint , uniform , normal\n",
     "\n",
     "\n",
     "\n",
