新增其他函數筆記內容

--- a/基礎 python 語法練習/常見函數練習/其他函數.ipynb
+++ b/基礎 python 語法練習/常見函數練習/其他函數.ipynb
@@ -12,6 +12,7 @@
      "text": [
       "2\n",
       "[1, 3, 5]\n",
+      "[nan, nan]\n",
       "[1, 3, 5]\n"
      ]
     }
@@ -21,12 +22,12 @@
     "\n",
     "\n",
     "\n",
-    "# 1. math.isna() , itertools.filterfalse()\n",
+    "# 1. math.isna() , itertools.filterfalse() / filter()\n",
     "\n",
     "\n",
     "# isna() 是判斷是否為 NaN ( 數值類別 ) 的函數，會回傳布林值\n",
     "\n",
-    "# filterfalse 會針對 iterable 裡面的布林值去篩選 false 的，是類似 map() 的轉陣列型函數\n",
+    "# filterfalse() / filter() 會針對 iterable 裡面的布林值去篩選 false / true 的，是類似 map() 的轉陣列型函數\n",
     "\n",
     "# 兩者結合就可以達到一般 iterable 的非 NaN 元素篩選\n",
     "\n",
@@ -50,6 +51,12 @@
     "b = list(itertools.filterfalse(math.isnan,a))\n",
     "\n",
     "print(b)\n",
+    "\n",
+    "# filter 是挑 true 的，所以只會剩 NaN\n",
+    "\n",
+    "b_2 = list(filter(math.isnan,a))\n",
+    "\n",
+    "print(b_2)\n",
     "\n",
     "# 用 list comprehension 來做\n",
     "\n",
