--- a/基礎 python 語法練習/常見函數練習/其他函數.ipynb
+++ b/基礎 python 語法練習/常見函數練習/其他函數.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d439fb00",
    "metadata": {},
    "outputs": [
@@ -13,6 +13,7 @@
       "2\n",
       "[1, 3, 5]\n",
       "[nan, nan]\n",
+      "[1, 3, 5]\n",
       "[1, 3, 5]\n"
      ]
     }
@@ -57,6 +58,14 @@
     "b_2 = list(filter(math.isnan,a))\n",
     "\n",
     "print(b_2)\n",
+    "\n",
+    "# filterfalse 用 lambda 來做，可以用 or 條件\n",
+    "\n",
+    "b_3 = list(itertools.filterfalse(lambda x : math.isnan(x),a))\n",
+    "\n",
+    "# b_3 = list(itertools.filterfalse(lambda x : math.isnan(x) == True or x == \"\",a))\n",
+    "\n",
+    "print(b_3)\n",
     "\n",
     "# 用 list comprehension 來做\n",
     "\n",
