新增資料統計特徵筆記

--- a/資料處理/資料統計特徵/code.ipynb
+++ b/資料處理/資料統計特徵/code.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3ef93d17",
    "metadata": {},
    "outputs": [
@@ -77,12 +77,13 @@
     "\n",
     "# 用 size 就不用 row * column 來得到元素的總數\n",
     "\n",
-    "print(array.size)\n"
+    "print(array.size)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "91089c00",
    "metadata": {},
    "outputs": [
@@ -120,7 +121,7 @@
     "\n",
     "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
     "\n",
-    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",130],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
     "\n",
     "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
     "\n",
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f61623fd",
    "metadata": {},
    "outputs": [
@@ -180,7 +181,10 @@
       "2.0\n",
       "1.4142135623730951\n",
       "1\n",
-      "5\n"
+      "5\n",
+      "2.0\n",
+      "3.0\n",
+      "4.0\n"
      ]
     }
    ],
@@ -193,9 +197,11 @@
     "\n",
     "# 就是計算一群數字的統計量的函數，或者說聚合函數\n",
     "\n",
+    "# 大部分都是用建構式 numpy.sum(array) 使用，偶爾也可以用呼叫物件方法 array.sum() 來做\n",
     "\n",
     "\n",
-    "# a-1. sum , count 是基本資訊\n",
+    "\n",
+    "# a-1. sum() , count() 是基本資訊\n",
     "\n",
     "# count 元素總數是 size 代替 , 如果要 count 只有 count_nonzero\n",
     "\n",
@@ -210,7 +216,9 @@
     "print(numpy_count)\n",
     "\n",
     "\n",
-    "# a-2. mean , median 是集中量數 \n",
+    "# a-2. mean() , median() 是集中量數 \n",
+    "\n",
+    "# numpy 沒有 mode , 要用 panda 或 scipy.stats\n",
     "\n",
     "numpy_mean = numpy.mean(array)\n",
     "\n",
@@ -221,7 +229,7 @@
     "print(numpy_median)\n",
     "\n",
     "\n",
-    "# a-3.  var , std , max , min 是離散量數 \n",
+    "# a-3.  var() , std() 是離散量數 \n",
     "\n",
     "# 這邊的 var 是樣本的 var，是除 N - 1 \n",
     "\n",
@@ -229,17 +237,35 @@
     "\n",
     "numpy_std = numpy.std(array)\n",
     "\n",
-    "numpy_min = numpy.min(array)\n",
-    "\n",
-    "numpy_max = numpy.max(array)\n",
-    "\n",
     "print(numpy_var)\n",
     "\n",
     "print(numpy_std)\n",
     "\n",
+    "\n",
+    "# a-4. min() , max() , quantile() 是離散 / 分配情形\n",
+    "\n",
+    "numpy_min = numpy.min(array)\n",
+    "\n",
+    "numpy_max = numpy.max(array)\n",
+    "\n",
+    "# quantile 的參數要用 0 ~ 1 之間來表示\n",
+    "\n",
+    "numpy_quantile_1 = numpy.quantile(array,q=0.25)\n",
+    "\n",
+    "numpy_quantile_2 = numpy.quantile(array,q=0.5)\n",
+    "\n",
+    "numpy_quantile_3 = numpy.quantile(array,q=0.75)\n",
+    "\n",
     "print(numpy_min)\n",
     "\n",
-    "print(numpy_max)\n"
+    "print(numpy_max)\n",
+    "\n",
+    "print(numpy_quantile_1)\n",
+    "\n",
+    "print(numpy_quantile_2)\n",
+    "\n",
+    "print(numpy_quantile_3)\n",
+    "\n"
    ]
   },
   {
@@ -248,6 +274,24 @@
    "id": "52833c19",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "690\n",
+      "5\n",
+      "138.0\n",
+      "130.0\n",
+      "130\n",
+      "270.0\n",
+      "16.431676725154983\n",
+      "120\n",
+      "160\n",
+      "130.0\n",
+      "130.0\n",
+      "150.0\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -279,11 +323,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>140.000000</td>\n",
+       "      <td>138.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>15.811388</td>\n",
+       "      <td>16.431677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -295,7 +339,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>140.000000</td>\n",
+       "      <td>130.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -312,16 +356,16 @@
       "text/plain": [
        "              收盤價\n",
        "count    5.000000\n",
-       "mean   140.000000\n",
-       "std     15.811388\n",
+       "mean   138.000000\n",
+       "std     16.431677\n",
        "min    120.000000\n",
        "25%    130.000000\n",
-       "50%    140.000000\n",
+       "50%    130.000000\n",
        "75%    150.000000\n",
        "max    160.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,11 +377,80 @@
     "\n",
     "# b. pandas 的統計描述函數\n",
     "\n",
+    "# 這邊都是用呼叫物件方法 array.sum() 來做，沒有用建構式 numpy.sum(array) 來計算\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",130],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
     "\n",
     "\n",
+    "# b-1. sum() , count()\n",
+    "\n",
+    "pandas_sum = dataframe[\"收盤價\"].sum()\n",
+    "\n",
+    "pandas_count = dataframe[\"收盤價\"].count()\n",
+    "\n",
+    "print(pandas_sum)\n",
+    "\n",
+    "print(pandas_count)\n",
     "\n",
     "\n",
-    "# b-3. describe()\n",
+    "# b-2. mean() , median() , mode()\n",
+    "\n",
+    "pandas_mean = dataframe[\"收盤價\"].mean()\n",
+    "\n",
+    "pandas_median = dataframe[\"收盤價\"].median()\n",
+    "\n",
+    "# mode 只有一個時為一個 shape 為 [1,] 的 series，要用 [0] 來取出數值\n",
+    "\n",
+    "pandas_mode = dataframe[\"收盤價\"].mode()[0]\n",
+    "\n",
+    "print(pandas_mean)\n",
+    "\n",
+    "print(pandas_median)\n",
+    "\n",
+    "print(pandas_mode)\n",
+    "\n",
+    "\n",
+    "# b-3. var() , std()\n",
+    "\n",
+    "pandas_var = dataframe[\"收盤價\"].var()\n",
+    "\n",
+    "pandas_std = dataframe[\"收盤價\"].std()\n",
+    "\n",
+    "print(pandas_var)\n",
+    "\n",
+    "print(pandas_std)\n",
+    "\n",
+    "\n",
+    "# b-4. min , max , quantile()\n",
+    "\n",
+    "pandas_min = dataframe[\"收盤價\"].min()\n",
+    "\n",
+    "pandas_max = dataframe[\"收盤價\"].max()\n",
+    "\n",
+    "# quantile 的參數要用 0 ~ 1 之間來表示\n",
+    "\n",
+    "pandas_quantile_1 = dataframe[\"收盤價\"].quantile(q=0.25)\n",
+    "\n",
+    "pandas_quantile_2 = dataframe[\"收盤價\"].quantile(q=0.5)\n",
+    "\n",
+    "pandas_quantile_3 = dataframe[\"收盤價\"].quantile(q=0.75)\n",
+    "\n",
+    "print(pandas_min)\n",
+    "\n",
+    "print(pandas_max)\n",
+    "\n",
+    "print(pandas_quantile_1)\n",
+    "\n",
+    "print(pandas_quantile_2)\n",
+    "\n",
+    "print(pandas_quantile_3)\n",
+    "\n",
+    "\n",
+    "# b-5. describe()\n",
     "\n",
     "# 可以直接對數值欄位產生基本統計敘述，很方便\n",
     "\n",
@@ -358,8 +471,9 @@
       "2.8\n",
       "3\n",
       "3\n",
+      "2.2\n",
       "1.4832396974191326\n",
-      "[1.5, 3.0, 4.0]\n",
+      "[1.0, 2.0, 3.0, 3.0, 5.0]\n",
       "ModeResult(mode=np.int64(3), count=np.int64(2))\n"
      ]
     }
@@ -385,7 +499,7 @@
     "\n",
     "\n",
     "\n",
-    "# c-1. statistics : mean , median , mode , std , var , quantiles\n",
+    "# c-1. statistics : mean , median , mode , var , std , min , max , quantiles\n",
     "\n",
     "array = [1,2,3,3,5]\n",
     "\n",
@@ -403,15 +517,21 @@
     "\n",
     "print(stats_mode)\n",
     "\n",
+    "stats_var = stats.variance(array)\n",
+    "\n",
+    "print(stats_var)\n",
+    "\n",
     "stats_std = stats.stdev(array)\n",
     "\n",
     "# numpy.array 這邊會直接報錯\n",
     "\n",
     "print(stats_std)\n",
     "\n",
-    "stats_quatiles = stats.quantiles(array)\n",
+    "# n 代表顯示幾個 quantiles , 設定 6 就是全部\n",
     "\n",
-    "# 顯示的是 1 , 2 , 3 分位，0 和 4 就是最小和最大值\n",
+    "# 回傳 list , 第 1 到 3 個就是 1 , 2 , 3 分位 , 第 0 和 4 個就是最小和最大值\n",
+    "\n",
+    "stats_quatiles = stats.quantiles(array,n=6)\n",
     "\n",
     "print(stats_quatiles)\n",
     "\n",
@@ -488,6 +608,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff461228",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# b. pandas 沒有 covariance 和 correlation 可以算，要用 numpy 或 statistics , scipy.stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3968e761",
    "metadata": {},
    "outputs": [
@@ -495,9 +625,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.5248162032024974\n",
-      "0.8304330398846834\n",
-      "0.8304330398846834\n"
+      "4.543742402059025\n",
+      "0.8907669007599521\n",
+      "0.8907669007599521\n"
      ]
     }
    ],
@@ -508,11 +638,11 @@
     "\n",
     "\n",
     "\n",
-    "# b. statistics , scipy 的相關性計算函數\n",
+    "# c. statistics , scipy 的相關性計算函數\n",
     "\n",
     "\n",
     "\n",
-    "# b-1. statistics : covariance , correlation\n",
+    "# c-1. statistics : covariance , correlation\n",
     "\n",
     "a = numpy.random.normal(loc=1,scale=2,size=100)\n",
     "\n",
@@ -531,7 +661,7 @@
     "print(stats_correlation)\n",
     "\n",
     "\n",
-    "# b-2. scipy : Pearson's correlation\n",
+    "# c-2. scipy : Pearson's correlation\n",
     "\n",
     "scistats_correlation = scistats.pearsonr(a,b)\n",
     "\n",
@@ -562,11 +692,11 @@
     "\n",
     "\n",
     "\n",
-    "# c. 圖形化呈現\n",
+    "# d. 圖形化呈現\n",
     "\n",
     "\n",
     "\n",
-    "# c-1. 標準散佈圖\n",
+    "# d-1. 標準散佈圖\n",
     "\n",
     "a = numpy.random.normal(loc=1,scale=2,size=100)\n",
     "\n",
