新增統計特徵及 pandas 筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -698,13 +698,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3]\n",
       "[np.float64(0.7310585786300049) np.float64(0.8807970779778823)\n",
       " np.float64(0.9525741268224334)]\n",
       "[2 4 6]\n",
       "[np.float64(0.7310585786300049), np.float64(0.8807970779778823), np.float64(0.9525741268224334)]\n",
       "[2, 4, 6]\n",
-      "[np.float64(0.7310585786300049), np.float64(0.8807970779778823), np.float64(0.9525741268224334)]\n"
+      "[np.float64(0.7310585786300049), np.float64(0.8807970779778823), np.float64(0.9525741268224334)]\n",
+      "   0\n",
+      "0  1\n",
+      "1  2\n",
+      "2  3\n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  6\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "1  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "3  20250804  aaa  150\n",
+      "4  20250805  aaa  160\n",
+      "         日期   名稱  收盤價  成交量\n",
+      "0  20250801  aaa  120   10\n",
+      "1  20250802  aaa  130   20\n",
+      "2  20250803  aaa  140   30\n",
+      "3  20250804  aaa  150   40\n",
+      "4  20250805  aaa  160   50\n",
+      "         日期   名稱  開盤價  收盤價  成交量\n",
+      "0  20250801  aaa  110  120   10\n",
+      "1  20250802  aaa  120  130   20\n",
+      "2  20250803  aaa  130  140   30\n",
+      "3  20250804  aaa  140  150   40\n",
+      "4  20250805  aaa  150  160   50\n"
      ]
     }
    ],
@@ -793,6 +817,69 @@
     "comprehension_list = [sigmoid(item) for item in linear_y]\n",
     "\n",
     "print(comprehension_list)\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pandas\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. numpy array 轉 pandas dataframe\n",
+    "\n",
+    "\n",
+    "# a. 直接用 pandas.dataframe()\n",
+    "\n",
+    "# 一維 : 會使 array 元素變成列表示\n",
+    "\n",
+    "a = numpy.array([1,2,3])\n",
+    "\n",
+    "a_dataframe = pandas.DataFrame(a)\n",
+    "\n",
+    "print(a_dataframe)\n",
+    "\n",
+    "# 二維 : 就是正常的 dataframe , dataframe 本身就是二維\n",
+    "\n",
+    "b = numpy.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "b_dataframe = pandas.DataFrame(b)\n",
+    "\n",
+    "print(b_dataframe)\n",
+    "\n",
+    "\n",
+    "# b. 使用 from_records()\n",
+    "\n",
+    "# 基本上和 pandas.dataframe() 方法一樣，沒有差別\n",
+    "\n",
+    "array_column = numpy.array([\"日期\",\"名稱\",\"收盤價\"])\n",
+    "\n",
+    "array_row = numpy.array([[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]])\n",
+    "\n",
+    "dataframe = pandas.DataFrame.from_records(array_row,columns=array_column)\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "\n",
+    "# c. 額外技巧 : 把 numpy array 加入 dataframe 變成新的一欄\n",
+    "\n",
+    "# 就是把 numpy 的 array 當成資料 list 而已\n",
+    "\n",
+    "array_volumn = numpy.array([10,20,30,40,50])\n",
+    "\n",
+    "array_start = numpy.array([110,120,130,140,150])\n",
+    "\n",
+    "# c-1. 用一般新增欄位方法\n",
+    "\n",
+    "dataframe[\"成交量\"] = array_volumn\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "# c-2. 用 insert() 方法指定位置\n",
+    "\n",
+    "dataframe.insert(2,column=\"開盤價\",value=array_start)\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
