--- a/資料處理/資料統計特徵/code.ipynb
+++ b/資料處理/資料統計特徵/code.ipynb
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e3597990",
    "metadata": {},
    "outputs": [
@@ -568,8 +568,10 @@
      "text": [
       "[[2.5  1.25]\n",
       " [1.25 0.7 ]]\n",
+      "1.25\n",
       "[[1.         0.94491118]\n",
-      " [0.94491118 1.        ]]\n"
+      " [0.94491118 1.        ]]\n",
+      "0.9449111825230679\n"
      ]
     }
    ],
@@ -594,6 +596,12 @@
     "\n",
     "print(numpy_cov)\n",
     "\n",
+    "# 可以用 n * m 列 = 第 n 個資料對第 m 個資料的相關性來看即可\n",
+    "\n",
+    "cov_1_2 = numpy_cov[0,1]\n",
+    "\n",
+    "print(cov_1_2)\n",
+    "\n",
     "\n",
     "# a-2. correlation 的計算\n",
     "\n",
@@ -602,6 +610,12 @@
     "numpy_correlate = numpy.corrcoef(array,array_2)\n",
     "\n",
     "print(numpy_correlate)\n",
+    "\n",
+    "# 可以用 n * m 列 = 第 n 個資料對第 m 個資料的相關性來看即可\n",
+    "\n",
+    "corr_1_2 = numpy_correlate[0,1]\n",
+    "\n",
+    "print(corr_1_2)\n",
     "\n"
    ]
   },
