新增資料統計特徵筆記內容

--- a/資料處理/資料統計特徵/code.ipynb
+++ b/資料處理/資料統計特徵/code.ipynb
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e3597990",
    "metadata": {},
    "outputs": [
@@ -598,9 +598,15 @@
     "\n",
     "# 可以用 n * m 列 = 第 n 個資料對第 m 個資料的相關性來看即可\n",
     "\n",
+    "# 反過來 m * n 也還會是對的，就是兩個有對到就好，順序沒關係\n",
+    "\n",
     "cov_1_2 = numpy_cov[0,1]\n",
     "\n",
+    "cov_2_1 = numpy_cov[1,0]\n",
+    "\n",
     "print(cov_1_2)\n",
+    "\n",
+    "print(cov_2_1)\n",
     "\n",
     "\n",
     "# a-2. correlation 的計算\n",
@@ -613,9 +619,15 @@
     "\n",
     "# 可以用 n * m 列 = 第 n 個資料對第 m 個資料的相關性來看即可\n",
     "\n",
+    "# 反過來 m * n 也還會是對的\n",
+    "\n",
     "corr_1_2 = numpy_correlate[0,1]\n",
     "\n",
+    "corr_2_1 = numpy_correlate[1,0]\n",
+    "\n",
     "print(corr_1_2)\n",
+    "\n",
+    "print(corr_2_1)\n",
     "\n"
    ]
   },
