--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -11,62 +11,13 @@
     "\n",
     "\n",
     "\n",
-    "# 分成三個部分 : \n",
+    "# 正常步驟 , 分成三個部分 : \n",
     "\n",
     "# 1. 辨識出四種遺漏值 , NaN , \"\" , \" \" , None\n",
     "\n",
     "# 2. 將遺漏值轉換成 NaN\n",
     "\n",
     "# 3. 用 pandas , numpy 或 python 內建函數來移除 NaN\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 1. 辨識遺漏值\n",
-    "\n",
-    "\n",
-    "# a. NaN : \n",
-    "\n",
-    "# 屬於數值型的類別，常常是計算產生，例如無窮大\n",
-    "\n",
-    "# NaN 因此不能用 == 來辨識，要用各個模組的函數，像是 isna 之類\n",
-    "\n",
-    "\n",
-    "# b. \"\" : \n",
-    "\n",
-    "# 是空字串，但是還是算一種資料，屬於 string \n",
-    "\n",
-    "# 可以用 == \"\" 來偵測\n",
-    "\n",
-    "\n",
-    "# c. \" \" : \n",
-    "\n",
-    "# 是空白的字串，屬於 string\n",
-    "\n",
-    "# 因為可能有多個空白，所以要搭配 strip() == \"\" 把空白拿掉確認沒有東西來辨識\n",
-    "\n",
-    "\n",
-    "# d. None : \n",
-    "\n",
-    "# 是 Python 的一種型別，就是 None 型別\n",
-    "\n",
-    "# 可以直接用 == \"None\" 來偵測\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 2. 轉換成 NaN\n",
-    "\n",
-    "# 因為多數模組有提供辨識 NaN 並移除的功能，因此可以轉換完後辨識並移除，例如 dropna()\n",
-    "\n",
-    "# 轉換主要是用 replace 來進行\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 3. 移除 Nan\n",
-    "\n",
-    "# 轉換成 NaN 之後用模組的辨識方式來\n",
-    "\n",
-    "# 主要是用布林陣列或 List comprehension + if 來轉換其它遺漏值變成 NaN\n",
-    "\n",
     "\n",
     "\n"
    ]
@@ -77,12 +28,178 @@
    "id": "f1073fa6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1. 辨識遺漏值\n",
+    "\n",
+    "\n",
+    "# a. NaN : \n",
+    "\n",
+    "# 型別 : 屬於數值型的類別，常常是計算產生，例如無窮大，或者是數值空格沒填資料，float(\"NaN\") , numpy.nan , pandas.na 都算是這種\n",
+    "\n",
+    "# 判斷 : NaN 因此不能用 == 來辨識，要用各個模組的函數，像是 math.isnan() , numpy.isnan() , dataframe.isna() 之類\n",
+    "\n",
+    "\n",
+    "# b. \"\" : \n",
+    "\n",
+    "# 型別 : 是空字串，但是還是算一種資料，屬於 string \n",
+    "\n",
+    "# 判斷 : 可以用 == \"\" 來偵測\n",
+    "\n",
+    "\n",
+    "# c. \" \" : \n",
+    "\n",
+    "# 型別 : 是空白的字串，屬於 string\n",
+    "\n",
+    "# 判斷 : 因為可能有多個空白，所以要搭配 strip() == \"\" 把空白拿掉確認沒有東西來辨識\n",
+    "\n",
+    "\n",
+    "# d. None : \n",
+    "\n",
+    "# 型別 : 是 Python 的一種型別，就是 None 型別\n",
+    "\n",
+    "# 判斷 : 可以直接用 == \"None\" 來偵測\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e722df7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n",
+      "1  20250802  aaa    NaN\n",
+      "2  20250803  aaa    NaN\n",
+      "3  20250804       150.0\n",
+      "4      None  aaa  160.0\n",
+      "         日期   名稱\n",
+      "0  20250801  aaa\n",
+      "1  20250802  aaa\n",
+      "2  20250803  aaa\n",
+      "3  20250804     \n",
+      "4      None  aaa\n",
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n",
+      "1  20250802  aaa    NaN\n",
+      "2  20250803  aaa    NaN\n",
+      "3  20250804       150.0\n",
+      "4      None  aaa  160.0\n",
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n",
+      "1  20250802  aaa    NaN\n",
+      "2  20250803  aaa    NaN\n",
+      "3  20250804  NaN  150.0\n",
+      "4       NaN  aaa  160.0\n",
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 轉換成 NaN\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pandas\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 因為多數模組有提供辨識 NaN 並移除的功能，因此可以轉換完成 NaN 辨識並移除\n",
+    "\n",
+    "# 轉換 NaN 主要是用 replace 來進行\n",
+    "\n",
+    "\n",
+    "# a. 下面用 pandas dataframe 舉例，有五種類型的遺漏值\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "\n",
+    "# b. 找出這些遺漏值並轉成 NaN\n",
+    "\n",
+    "# 要把不同資料類型的欄位區分出來做，數值歸數值，字串歸字串，不然 pandas.isna() / numpy.isnan() 會報錯\n",
+    "\n",
+    "# b-1. 用 select_dtypes() 來挑選出文字欄位，會回傳一個挑選欄位的 dataframe\n",
+    "\n",
+    "select_dataframe = dataframe.select_dtypes(include=\"object\")\n",
+    "\n",
+    "print(select_dataframe)\n",
+    "\n",
+    "# b-2. 用 columns 迴圈來做 strip() , 因為 str.strip() 只能給 series 用 , dataframe 不能用\n",
+    "\n",
+    "for col in select_dataframe.columns : \n",
+    "\n",
+    "    dataframe[col] = dataframe[col].str.strip()\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "# b-3. 接下來就用 replace 把 strip 完的 dataframe 的所有文字遺漏值轉換成 NaN\n",
+    "\n",
+    "dataframe.replace([\"\",None],float(\"NaN\"),inplace=True)\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. 移除 NaN\n",
+    "\n",
+    "# 轉換成 NaN 之後用模組的函數來移除，例如 dropna()\n",
+    "\n",
+    "\n",
+    "# 最後用 dropna() 把缺失行去掉\n",
+    "\n",
+    "dataframe.dropna(inplace=True)\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20042549",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. 其他方式 : \n",
+    "\n",
+    "\n",
+    "# a. pandas / numpy : isna() , isnan() 形成布林陣列來篩選移除\n",
+    "\n",
+    "# b. List comprehension + if : 直接一個一個元素辨識並挑選不是遺漏值的元素\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
