新增遺漏值筆記內容

--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "# 型別 : 是 Python 的一種型別，就是 None 型別\n",
     "\n",
-    "# 判斷 : 可以直接用 == \"None\" 來偵測\n",
+    "# 判斷 : 可以直接用 is None 來偵測\n",
     "\n"
    ]
   },
@@ -144,7 +144,27 @@
     "\n",
     "print(dataframe)\n",
     "\n",
+    "# 第二種寫法 : 用 applymap() , 就是 apply() 逐行 + map() 逐個元素 處理，所以效能比較不好\n",
+    "\n",
+    "    # 下面就是前面元素被迭帶代入 strip() , 像 map(strip()) 一樣 \n",
+    "    \n",
+    "    # 後面判斷是 str 才做 strip(x) 並傳出，不是就維持原來 x 傳出\n",
+    "\n",
+    "    # isinstance() 就是 in [...] 的函數版本\n",
+    "\n",
+    "    # dataframe = dataframe.applymap(lambda x: x.strip() if isinstance(x, str) else x)\n",
+    "\n",
+    "# 第三種寫法 : 用 apply() 直接逐行處理，效能比較好\n",
+    "\n",
+    "    # 不過就不用 for 迴圈，直接給 iterable 就可以，這樣 lambda 才可以產生作用\n",
+    "\n",
+    "    # select_columns = select_dataframe.columns\n",
+    "\n",
+    "    # dataframe[select_columns] = dataframe[select_columns].apply(lambda col : col.str.strip())\n",
+    "\n",
     "# b-3. 接下來就用 replace 把 strip 完的 dataframe 的所有文字遺漏值轉換成 NaN\n",
+    "\n",
+    "# 記得要加 inplace = True\n",
     "\n",
     "dataframe.replace([\"\",None],float(\"NaN\"),inplace=True)\n",
     "\n",
@@ -154,10 +174,12 @@
     "\n",
     "# 3. 移除 NaN\n",
     "\n",
-    "# 轉換成 NaN 之後用模組的函數來移除，例如 dropna()\n",
+    "# 轉換成 NaN 之後用模組的函數來移除，例如 pandas.dropna()\n",
     "\n",
     "\n",
     "# 最後用 dropna() 把缺失行去掉\n",
+    "\n",
+    "# 記得要加 inplace = True\n",
     "\n",
     "dataframe.dropna(inplace=True)\n",
     "\n",
