新增遺漏值筆記

--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e722df7a",
    "metadata": {},
    "outputs": [
@@ -101,18 +101,18 @@
     }
    ],
    "source": [
-    "# 2. 轉換成 NaN\n",
-    "\n",
-    "\n",
-    "\n",
     "import pandas\n",
-    "import numpy\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. 轉換成 NaN\n",
     "\n",
     "\n",
     "\n",
     "# 因為多數模組有提供辨識 NaN 並移除的功能，因此可以轉換完成 NaN 辨識並移除\n",
     "\n",
     "# 轉換 NaN 主要是用 replace 來進行\n",
+    "\n",
     "\n",
     "\n",
     "# a. 下面用 pandas dataframe 舉例，有五種類型的遺漏值\n",
@@ -156,11 +156,15 @@
     "\n",
     "# 第三種寫法 : 用 apply() 直接逐行處理，效能比較好\n",
     "\n",
-    "    # 不過就不用 for 迴圈，直接給 iterable 就可以，這樣 lambda 才可以產生作用\n",
+    "    # 不過就不用 for 迴圈，直接給 iterable 就可以，lambda 基本上就是迴圈，map() 那些也都是\n",
     "\n",
     "    # select_columns = select_dataframe.columns\n",
     "\n",
     "    # dataframe[select_columns] = dataframe[select_columns].apply(lambda col : col.str.strip())\n",
+    "\n",
+    "    # 或下面接近 map() 的寫法，省略裡面呼叫函數的括號，apply() 代入的變數就是前面的 iterable 的元素\n",
+    "\n",
+    "    # dataframe[select_columns] = dataframe[select_columns].apply(str.strip)\n",
     "\n",
     "# b-3. 接下來就用 replace 把 strip 完的 dataframe 的所有文字遺漏值轉換成 NaN\n",
     "\n",
@@ -173,6 +177,8 @@
     "\n",
     "\n",
     "# 3. 移除 NaN\n",
+    "\n",
+    "\n",
     "\n",
     "# 轉換成 NaN 之後用模組的函數來移除，例如 pandas.dropna()\n",
     "\n",
@@ -192,14 +198,104 @@
    "execution_count": null,
    "id": "20042549",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         日期   名稱\n",
+      "0  20250801  aaa\n",
+      "1  20250802  aaa\n",
+      "2  20250803  aaa\n",
+      "3  20250804     \n",
+      "4      None  aaa\n",
+      "     收盤價\n",
+      "0  120.0\n",
+      "1    NaN\n",
+      "2    NaN\n",
+      "3  150.0\n",
+      "4  160.0\n",
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 4. 其他方式 1 : 布林陣列\n",
+    "\n",
+    "# pandas / numpy : isna() , isnan() 形成布林陣列來篩選移除\n",
+    "\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "\n",
+    "# a. pandas 的作法 : \n",
+    "\n",
+    "# a-1. 先區分出字串和數字欄位，不然用字串用 isna() 會報錯\n",
+    "\n",
+    "dataframe_string = dataframe.select_dtypes(include=\"object\")\n",
+    "\n",
+    "dataframe_number = dataframe.select_dtypes(include=\"number\")\n",
+    "\n",
+    "print(dataframe_string)\n",
+    "\n",
+    "print(dataframe_number)\n",
+    "\n",
+    "# a-2. 再各自用不同函數做布林陣列篩選\n",
+    "\n",
+    "# 字串欄位就用 ~ 加上 isin()\n",
+    "\n",
+    "select_string = dataframe_string.columns\n",
+    "\n",
+    "for col in select_string : \n",
+    "\n",
+    "    dataframe = dataframe[~dataframe[col].str.strip().isin([\"\",None])]\n",
+    "\n",
+    "# 數字欄位就用 isna() 或 notna()\n",
+    "\n",
+    "select_number = dataframe_number.columns\n",
+    "\n",
+    "for col in select_number : \n",
+    "\n",
+    "    dataframe = dataframe[dataframe[col].notna()]\n",
+    "\n",
+    "# 這邊 lambda 寫法會出錯 \n",
+    "\n",
+    "# dataframe = dataframe[~dataframe[select_string].apply(lambda col : col.str.strip().isin([\"\",None]))]\n",
+    "\n",
+    "# dataframe = dataframe[~dataframe[select_number].apply(lambda col : col.isna())]\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0453e4af",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. 其他方式 : \n",
+    "import math\n",
+    "import itertools\n",
     "\n",
     "\n",
-    "# a. pandas / numpy : isna() , isnan() 形成布林陣列來篩選移除\n",
     "\n",
-    "# b. List comprehension + if : 直接一個一個元素辨識並挑選不是遺漏值的元素\n",
+    "# 5. 其他方式 2 : python 原生方式\n",
+    "\n",
+    "# List comprehension + if : 直接一個一個元素辨識並挑選不是遺漏值的元素\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
