新增 pandas 模組和遺漏值處理筆記

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "08b401bf",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,35 @@
     "\n",
     "\n",
     "\n",
-    "# 2. loc() 和 iloc()\n",
+    "# 2. append()\n",
+    "\n",
+    "# dataframe 如果要新增一筆資料，也就是合併一個 series，可以用 append() \n",
+    "\n",
+    "# 新增多筆資料，也就是合併一個 dataframe，就用 concat()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. copy() \n",
+    "\n",
+    "# 就跟 numpy array 一樣，pandas 要複製 dataframe 可以用 copy()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 4. pandas 也有 shape 可以用，和 numpy 一樣，可以方便取得列和欄的數量\n",
+    "\n",
+    "array = dataframe_3.shape\n",
+    "\n",
+    "print(array)\n",
+    "\n",
+    "# 一樣可以用索引直接取得回傳的 tuple 的列和欄總數\n",
+    "\n",
+    "print(array[0])\n",
+    "\n",
+    "print(array[1])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 5. loc() 和 iloc()\n",
     "\n",
     "# loc 和 iloc 差別就像之前所說，loc 是針對文字標籤進行篩選的函數，iloc 是利用 index 數字標籤去篩選\n",
     "\n",
@@ -945,17 +973,7 @@
     "\n",
     "\n",
     "\n",
-    "# 3. pandas 也有 shape 可以用，和 numpy 一樣，可以方便取得列和欄的數量\n",
     "\n",
-    "array = dataframe_3.shape\n",
-    "\n",
-    "print(array)\n",
-    "\n",
-    "# 一樣可以用索引直接取得回傳的 tuple 的列和欄總數\n",
-    "\n",
-    "print(array[0])\n",
-    "\n",
-    "print(array[1])\n",
     "\n"
    ]
   }
