--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "e722df7a",
    "metadata": {},
    "outputs": [
@@ -158,6 +158,8 @@
     "\n",
     "    # 不過就不用 for 迴圈，直接給 iterable 就可以，lambda 基本上就是迴圈，map() 那些也都是\n",
     "\n",
+    "    # list comprehension = for 迴圈 = lambda = map() , apply() , frompyfunc() \n",
+    "\n",
     "    # select_columns = select_dataframe.columns\n",
     "\n",
     "    # dataframe[select_columns] = dataframe[select_columns].apply(lambda col : col.str.strip())\n",
@@ -178,18 +180,23 @@
     "\n",
     "# 3. 移除 NaN\n",
     "\n",
-    "\n",
-    "\n",
     "# 轉換成 NaN 之後用模組的函數來移除，例如 pandas.dropna()\n",
     "\n",
     "\n",
-    "# 最後用 dropna() 把缺失行去掉\n",
+    "# 最後用 dropna() 把遺漏值行去掉\n",
     "\n",
     "# 記得要加 inplace = True\n",
     "\n",
     "dataframe.dropna(inplace=True)\n",
     "\n",
     "print(dataframe)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 4. 找出 NaN \n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -203,6 +210,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n",
+      "1  20250802  aaa    NaN\n",
+      "2  20250803  aaa    NaN\n",
+      "3  20250804       150.0\n",
+      "4      None  aaa  160.0\n",
       "         日期   名稱\n",
       "0  20250801  aaa\n",
       "1  20250802  aaa\n",
@@ -216,7 +229,15 @@
       "3  150.0\n",
       "4  160.0\n",
       "         日期   名稱    收盤價\n",
-      "0  20250801  aaa  120.0\n"
+      "0  20250801  aaa  120.0\n",
+      "         日期   名稱    收盤價\n",
+      "4      None  aaa  160.0\n",
+      "3  20250804       150.0\n",
+      "         日期   名稱    收盤價\n",
+      "4      None  aaa  160.0\n",
+      "3  20250804       150.0\n",
+      "1  20250802  aaa    NaN\n",
+      "2  20250803  aaa    NaN\n"
      ]
     }
    ],
@@ -231,14 +252,22 @@
     "# pandas / numpy : isna() , isnan() 形成布林陣列來篩選移除\n",
     "\n",
     "\n",
+    "\n",
+    "# a. pandas 的作法 : \n",
+    "\n",
+    "\n",
     "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
     "\n",
     "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
     "\n",
     "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
     "\n",
+    "# 複製 dataframe 可以用 copy()\n",
     "\n",
-    "# a. pandas 的作法 : \n",
+    "dataframe_2 = dataframe.copy()\n",
+    "\n",
+    "print(dataframe_2)\n",
+    "\n",
     "\n",
     "# a-1. 先區分出字串和數字欄位，不然用字串用 isna() 會報錯\n",
     "\n",
@@ -251,6 +280,8 @@
     "print(dataframe_number)\n",
     "\n",
     "# a-2. 再各自用不同函數做布林陣列篩選\n",
+    "\n",
+    "# 分多次去掉不要的資料列即可，先做字串欄位篩選，再做數字欄位篩選\n",
     "\n",
     "# 字串欄位就用 ~ 加上 isin()\n",
     "\n",
@@ -275,6 +306,45 @@
     "# dataframe = dataframe[~dataframe[select_number].apply(lambda col : col.isna())]\n",
     "\n",
     "print(dataframe)\n",
+    "\n",
+    "# a-3. 如果要找出 NaN 的資料列，就把上面條件反過來的資料列整合即可\n",
+    "\n",
+    "# 不過和上面逐漸去掉是反過來的，因為是有找到新的列就加上去，所以要 concat()\n",
+    "\n",
+    "# 另外要加上宣告 dataframe = pandas.Dataframe() , 因為是類似 a = a + b , 也要寫 a = 0 , 如果沒有那段，記憶體會一直累加導致錯誤\n",
+    "\n",
+    "dataframe_3 = pandas.DataFrame()\n",
+    "\n",
+    "for col in select_string : \n",
+    "\n",
+    "    dataframe_3 = pandas.concat([dataframe_3,dataframe_2[dataframe_2[col].str.strip().isin([\"\",None])]])\n",
+    "\n",
+    "print(dataframe_3)\n",
+    "\n",
+    "dataframe_4 = pandas.DataFrame()\n",
+    "\n",
+    "for col in select_number : \n",
+    "\n",
+    "    dataframe_4 = pandas.concat([dataframe_4,dataframe_2[dataframe_2[col].isna()]])\n",
+    "\n",
+    "dataframe_combine = pandas.concat([dataframe_3,dataframe_4])\n",
+    "\n",
+    "print(dataframe_combine)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# b. numpy 的作法\n",
+    "\n",
+    "# numpy 基本上是處理數值為主的模組 , 因此提供的去除遺漏值方法只有數值的 isnan()\n",
+    "\n",
+    "# 但因為 numpy 本質是 list , 也是可以放數值以外的變數當作元素\n",
+    "\n",
+    "# 但是因為沒有 select_dtypes 這種函數，所以沒辦法篩選字串或數值欄位，直接對所有欄位做 isnan() 會報錯，因此比較常單純用在數值矩陣去除 NaN\n",
+    "\n",
+    "# numpy 如果有空格沒有放元素會錯誤 , 像是 [\"20250801\",\"aaa\", ] 這樣\n",
+    "\n",
+    "\n",
+    "array = numpy.array([[1,numpy.nan,3],[4,5,numpy.nan],[numpy.nan,8,9]])\n",
     "\n",
     "\n"
    ]
