新增 pandas 模組和資料統計特徵筆記

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -907,7 +907,9 @@
     "\n",
     "\n",
     "\n",
-    "# 4. pandas 也有 shape 可以用，和 numpy 一樣，可以方便取得列和欄的數量\n",
+    "# 4. shape\n",
+    "\n",
+    "# pandas 也有 shape 可以用，和 numpy 一樣，可以方便取得列和欄的數量\n",
     "\n",
     "array = dataframe_3.shape\n",
     "\n",
