--- a/資料處理/數值轉換處理/code.ipynb
+++ b/資料處理/數值轉換處理/code.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "# 正規化處理 ( Standardlization )\n",
+    "\n",
     "\n"
    ]
   },
@@ -18,13 +19,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 虛擬變數處理 ( Dummy Variables ) "
+    "# 虛擬變數處理 ( Dummy Variables ) \n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
