--- a/影像辨識/傳統機器學習影像物件分類/code.ipynb
+++ b/影像辨識/傳統機器學習影像物件分類/code.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 傳統 HOG + SVM 來對 NMIST 手寫數字資料集進行區分\n",
+    "# 傳統 HOG + SVM 人工特徵提取 + 機器學習模型 來對 NMIST 手寫數字資料集進行分類\n",
     "\n",
     "\n",
     "import cv2\n",
