遺漏值處理和 numpy 和其他函數筆記更新

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "36e97b63",
    "metadata": {},
    "outputs": [
@@ -728,12 +728,20 @@
       "1  20250802  aaa  120  130   20\n",
       "2  20250803  aaa  130  140   30\n",
       "3  20250804  aaa  140  150   40\n",
-      "4  20250805  aaa  150  160   50\n"
+      "4  20250805  aaa  150  160   50\n",
+      "[[  1   2   3   4   5   6]\n",
+      " [100 110 120 130 140 150]]\n",
+      "[[  1 100]\n",
+      " [  2 110]\n",
+      " [  3 120]\n",
+      " [  4 130]\n",
+      " [  5 140]\n",
+      " [  6 150]]\n"
      ]
     }
    ],
    "source": [
-    "# numpy 的其他函數\n",
+    "# numpy 的其他函數和屬性還有技巧\n",
     "\n",
     "\n",
     "\n",
@@ -880,6 +888,38 @@
     "print(dataframe)\n",
     "\n",
     "\n",
+    "\n",
+    "# 3. transpose() 和 T\n",
+    "\n",
+    "# numpy 有提供矩陣轉置的方法和屬性，在某些情況會很好用\n",
+    "\n",
+    "# T 比較適合二維，Transpose() 比較適合二維以上\n",
+    "\n",
+    "# 像是可以在資料室一行一行的情況下，像是一個一個數列，可以直接用一般方法形成矩陣，再轉置成一般的一列一列資料\n",
+    "\n",
+    "# 反之亦然，如果想要畫圖，也可以轉回來變成數列\n",
+    "\n",
+    "# 範例 : \n",
+    "\n",
+    "# a 是月份，一個時間序列\n",
+    "\n",
+    "a_1 = [1,2,3,4,5,6]\n",
+    "\n",
+    "# b 是數值，也是一個數列\n",
+    "\n",
+    "a_2 = [100,110,120,130,140,150]\n",
+    "\n",
+    "# 用成 array 會不符合一列一列資料的特性\n",
+    "\n",
+    "a_3 = numpy.array([a_1,a_2])\n",
+    "\n",
+    "print(c)\n",
+    "\n",
+    "# 所以轉置一般資料列的樣子\n",
+    "\n",
+    "a_4 = a_3.T\n",
+    "\n",
+    "print(a_4)\n",
     "\n"
    ]
   },
