--- a/基礎 python 語法練習/基本變數型別練習/code.ipynb
+++ b/基礎 python 語法練習/基本變數型別練習/code.ipynb
@@ -1189,6 +1189,25 @@
     "\n",
     "print(a)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a22cfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list comprehension 裡面可以再有 list comprehension , 是沒關係的\n",
+    "\n",
+    "import numpy\n",
+    "\n",
+    "array = numpy.array([[\"a\",2,3],[\"b\",5,6],[\"c\",8,9]])\n",
+    "\n",
+    "numeric_array = [index for index in range(array.shape[1]) if all([isinstance(item,(int,float)) for item in array[:,index]])]\n",
+    "\n",
+    "print(numeric_array)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
