--- a/基礎 python 語法練習/常見函數練習/其他函數.ipynb
+++ b/基礎 python 語法練習/常見函數練習/其他函數.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d439fb00",
    "metadata": {},
    "outputs": [
@@ -72,6 +72,44 @@
     "c = [item for item in a if math.isnan(item) != True]\n",
     "\n",
     "print(c)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2ecd575",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. all() 和 any()\n",
+    "\n",
+    "# 就是 or 和 and 的多數版\n",
+    "\n",
+    "# all : 所有為真才為真 , e.g. [True,True,True]\n",
+    "\n",
+    "# any : 其中一個為真即為真 , e.g. [True,False,True]\n",
+    "\n",
+    "# 要記得在 all / any 裡面加上 list \n",
+    "\n",
+    "row = [1,\"1\",1]\n",
+    "\n",
+    "value = all([isinstance(item,(int,float)) for item in row])\n",
+    "\n",
+    "value_2 = any([isinstance(item,(int,float)) for item in row])\n",
+    "\n",
+    "print(value)\n",
+    "\n",
+    "print(value_2)\n",
     "\n"
    ]
   }
