--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -150,7 +150,11 @@
     "    \n",
     "    # 後面判斷是 str 才做 strip(x) 並傳出，不是就維持原來 x 傳出\n",
     "\n",
-    "    # isinstance() 就是 in [...] 的函數版本\n",
+    "    # isinstance() 就是 in [...] 的函數版本，不過特別是看是不是哪個型別，例如 str , float ...\n",
+    "\n",
+    "    # 如果 isin / isinstance = is [...] 或 == [...] , 那 isna / isnan 就是 is nan 或 == nan \n",
+    "\n",
+    "    # isna / isnan / isin / isinstance 都是回傳布林值的函數\n",
     "\n",
     "    # dataframe = dataframe.applymap(lambda x: x.strip() if isinstance(x, str) else x)\n",
     "\n",
@@ -181,7 +185,6 @@
     "# 3. 移除 NaN\n",
     "\n",
     "# 轉換成 NaN 之後用模組的函數來移除，例如 pandas.dropna()\n",
-    "\n",
     "\n",
     "# 最後用 dropna() 把遺漏值行去掉\n",
     "\n",
@@ -237,7 +240,14 @@
       "4      None  aaa  160.0\n",
       "3  20250804       150.0\n",
       "1  20250802  aaa    NaN\n",
-      "2  20250803  aaa    NaN\n"
+      "2  20250803  aaa    NaN\n",
+      "[['a' '2' '3']\n",
+      " ['b' '5' '6']\n",
+      " ['c' '8' '9']]\n",
+      "<U21\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n"
      ]
     }
    ],
@@ -279,6 +289,7 @@
     "\n",
     "print(dataframe_number)\n",
     "\n",
+    "\n",
     "# a-2. 再各自用不同函數做布林陣列篩選\n",
     "\n",
     "# 分多次去掉不要的資料列即可，先做字串欄位篩選，再做數字欄位篩選\n",
@@ -306,6 +317,7 @@
     "# dataframe = dataframe[~dataframe[select_number].apply(lambda col : col.isna())]\n",
     "\n",
     "print(dataframe)\n",
+    "\n",
     "\n",
     "# a-3. 如果要找出 NaN 的資料列，就把上面條件反過來的資料列整合即可\n",
     "\n",
@@ -335,17 +347,43 @@
     "\n",
     "# b. numpy 的作法\n",
     "\n",
-    "# numpy 基本上是處理數值為主的模組 , 因此提供的去除遺漏值方法只有數值的 isnan()\n",
+    "# b-1. numpy 基本上是處理數值為主的模組 , 因此提供的去除遺漏值方法只有數值的 isnan()\n",
     "\n",
-    "# 但因為 numpy 本質是 list , 也是可以放數值以外的變數當作元素\n",
-    "\n",
-    "# 但是因為沒有 select_dtypes 這種函數，所以沒辦法篩選字串或數值欄位，直接對所有欄位做 isnan() 會報錯，因此比較常單純用在數值矩陣去除 NaN\n",
-    "\n",
-    "# numpy 如果有空格沒有放元素會錯誤 , 像是 [\"20250801\",\"aaa\", ] 這樣\n",
-    "\n",
+    "# b-2. numpy 也沒辦法處理有空字串的情況，如果有空格沒有放元素會錯誤 , 像是 [\"20250801\",\"aaa\", ] 這樣\n",
     "\n",
     "array = numpy.array([[1,numpy.nan,3],[4,5,numpy.nan],[numpy.nan,8,9]])\n",
     "\n",
+    "# b-3. 但因為 numpy 本質是 list , 也是可以放數值以外的變數當作元素\n",
+    "\n",
+    "array_2 = numpy.array([[\"a\",2,3],[\"b\",5,6],[\"c\",8,9]])\n",
+    "\n",
+    "print(array_2)\n",
+    "\n",
+    "# 但是只要是混和型 array , 全部元素都會自動轉型成 u21 或 u32 的混和型文字型別 , 用 dtype 屬性可以檢視\n",
+    "\n",
+    "# 或者是上面 array_2 檢視結果就可以發現都是字串\n",
+    "\n",
+    "print(array_2[0:1].dtype)\n",
+    "\n",
+    "# 因此即便 numpy 有 dtype , 還是不能代替沒有 select_dtypes() 的問題，因為都轉型成混和字串類別\n",
+    "\n",
+    "# 可以看下面例子，執行後就會發現因為都是字串，numeric_array 會是空的，value 可以發現都是錯\n",
+    "\n",
+    "# 目前只能用一個一個元素去檢驗的方式來判斷 , 用 isinstance() + all()\n",
+    "\n",
+    "# numeric_array = [index for index in range(array_2.shape[1]) if all([isinstance(item,(int,float)) for item in array_2[:,index]])]\n",
+    "\n",
+    "# print(numeric_array)\n",
+    "\n",
+    "# for index in range(array_2.shape[1]) : \n",
+    "\n",
+    "#     value = [type(item) for item in array_2[:,index]]\n",
+    "\n",
+    "#     print(value)\n",
+    "\n",
+    "# 結論 : 還是用 pandas 來做遺漏值排除會比較好，或者用下面的 list comprehension 一個一個元素看\n",
+    "\n",
+    "#        numpy 基本上還是數值型的陣列，主要是做為高效率運算用\n",
     "\n"
    ]
   },
